[package]
name = "releez"
version = "1.0.0"
description = "An utility tool to run application release-checklist very safely."
homepage = "https://github.com/rousan/releez"
repository = "https://github.com/rousan/releez"
keywords = ["release","checklist","runner"]
categories = ["command-line-utilities"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
clap = "2.33"
colored = "1.9"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
crossterm = "0.17"
semver = "0.9"