[package]
name = "releez"
version = "1.0.1"
description = "An utility tool to run application release-checklist safely."
homepage = "https://github.com/rousan/releez"
repository = "https://github.com/rousan/releez"
keywords = ["release", "checklist", "runner", "asynchronous"]
categories = ["command-line-utilities", "asynchronous"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
clap = "2.33"
colored = "1.9"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
semver = "0.9"
chrono = "0.4"
regex = "1.3"
tokio = { version = "0.2", features = ["rt-core", "fs", "io-std", "io-util", "stream", "process", "macros"] }
 